# XA_guard

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  docker-compose.ha-external.yml  docker-compose.reference.yml  docker-compose.yml  implementation-notes.html  log.md  pyproject.toml  requires.txt  status.md  todo.md
.opencode/: opencode.json
enterprise-agent-range/: README.md  log.md  pyproject.toml  status.md
enterprise-agent-range/.log/: worklog.md
enterprise-agent-range/cases/: p0_manifest.json  p1_manifest.json  p2_manifest.example.json
enterprise-agent-range/cases/arena/: OFFICE-INJ-001.attack.json  OFFICE-INJ-001.control.json  office-mail-smoke.json
enterprise-agent-range/docs/: 00-index.md  01-design-brief.md  02-goals-and-scope.md  03-enterprise-scenario.md  04-decoupling-contract.md  05-architecture.md  06-security-domains-and-assets.md  07-roles-and-permissions.md  08-tool-and-system-surface.md  09-attack-taxonomy.md  10-scenario-matrix.md  11-evaluation-oracles-and-metrics.md  12-evidence-and-audit-requirements.md  13-implementation-roadmap.md  14-risk-and-non-goals.md  15-data-model.md  16-data-flows.md  17-testcase-schema.md  README.md
enterprise-agent-range/docs/architecture/: arena-core.md  decoupling-contract.md  evidence-and-metrics.md
enterprise-agent-range/docs/plan/: enterprise-seat-plan.md  redteam-arena-refactor-plan.md
enterprise-agent-range/docs/redteam/: operator-guide.md
enterprise-agent-range/docs/reference/: attack-surface.md  domain-context.md  live-office-mail-smoke.md  p2-scope.md
enterprise-agent-range/fixtures/audit/: approval-tokens.json  audit-clean.json  audit-tampered.json  delegation-trace.json
enterprise-agent-range/fixtures/data/: contract-confidential.json  contractor-roster.json  customer-records-sample.json  employee-payroll-other.json  employee-self-record.json  project-atlas-budget.json  project-atlas-summary.json
enterprise-agent-range/fixtures/mail/: benign-internal-update.eml  finance-payment-spoof.eml  malicious-api-key-request.eml
enterprise-agent-range/fixtures/ops_logs/: app-clean.txt  app-poisoned.txt  leaked-alt-credential.txt
enterprise-agent-range/fixtures/p2/: README.md
enterprise-agent-range/fixtures/plugins/: benign-signed-plugin.json  formatter-malicious.json  hash-mismatch-aibom.json  missing-provenance-aibom.json  rug-pull-update.json
enterprise-agent-range/fixtures/policies/: internal-security-policy.md  public-handbook.md
enterprise-agent-range/fixtures/rag/: meeting-note-clean.md  meeting-note-poisoned.md  policy-poisoned-access.md
enterprise-agent-range/range_src/enterprise_agent_range/: __init__.py  adapters.py  cli.py  fixtures.py  io_utils.py  models.py  mutations.py  oracles.py  protocol.py  reports.py  runner.py  sensitive.py  systems.py  tools.py
enterprise-agent-range/reports/arena-live-2x2-smoke/: run-manifest.json
enterprise-agent-range/reports/compare-p0-p1-null/: compare.html  compare.json  compare.md
enterprise-agent-range/reports/p1-regression-after-live/: artifact-hashes.json  metrics.json  report.html  report.md  run-manifest.json
enterprise-agent-range/tests/: test_arena_agent_seat.py  test_arena_challenge.py  test_arena_cli.py  test_arena_end_to_end.py  test_arena_evidence.py  test_arena_findings.py  test_arena_injection.py  test_arena_live.py  test_arena_mcp_office_server.py  test_arena_office_tools.py  test_arena_opencode_and_sut.py  test_arena_oracle.py  test_arena_policy_overlay.py  test_arena_surface.py  test_arena_sut.py  test_arena_world.py  test_arena_worlds_and_suite.py  test_manifest_validation.py  test_oracles.py  test_p1_core.py  test_p2_benchmark.py  test_p2_dashboard.py  test_p2_discovery.py  test_p2_evidence.py  test_p2_identity.py  test_p2_permissions.py  test_p2_remediation.py  test_p2_risk.py  test_p2_scaffold.py  test_p2_scale.py  test_p2_tenancy.py  test_protocol_surfaces.py  test_reports.py  test_runner_smoke.py  test_tool_surface.py
(+1223 files in other folders)
