[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xa-guard"
version = "0.1.0"
description = "XA-Guard MCP Server — 政企智能体安全防护层（XA-202620 demo）"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "XA-Guard Team" }]
dependencies = [
    "mcp>=1.27.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "anyio>=4.0",
]

[project.optional-dependencies]
crypto = ["gmssl>=3.2.2", "cryptography>=42.0"]
# AIBOM 生产化（方向 3）：CycloneDX schema 校验（jsonschema）+ BOM 签名验签（cryptography）。
# 两者都按需 import，缺库时 schema_validator 走内建结构校验、signing 走 HMAC fallback。
aibom = ["jsonschema>=4.0", "cryptography>=42.0"]
bench = ["pytest>=8.0", "pytest-cov>=5.0", "jinja2>=3.1"]
http = ["starlette>=0.37", "uvicorn>=0.30"]
model = [
    "transformers>=4.51",
    "torch>=2.1",
    "accelerate>=0.30",
    "huggingface-hub>=0.23",
    "safetensors>=0.4",
    "sentencepiece>=0.2",
    "protobuf>=4.25",
    "psutil>=5.9",
]
sdk = ["langchain>=0.2"]
# 双层策略层：evalidate（overlay predicate AST 白名单）+ watchfiles（overlay 热加载）
# 两者都是可选；不装时 layered.py 走 fail-safe 路径，layered 仍可用但热加载降级为手动
policy = ["evalidate>=2.0", "watchfiles>=0.21"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6", "mypy>=1.10"]
all = ["xa-guard[crypto,aibom,bench,http,model,sdk,policy,dev]"]

[project.scripts]
xa-guard = "xa_guard.cli:main"
xa-bench = "bench.cli:main"
xa-aibom = "xa_guard.aibom.cli:main"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["xa_guard*", "bench*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"

[tool.coverage.run]
source = ["src/xa_guard", "bench"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ruff]
line-length = 110
target-version = "py310"
