[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-agent-range"
version = "0.1.0"
description = "Independent enterprise agent security range runtime."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
enterprise-agent-range = "enterprise_agent_range.cli:main"

[tool.setuptools]
package-dir = {"" = "range_src"}

[tool.setuptools.packages.find]
where = ["range_src"]
